# OCRProject

./: .gitignore  =0.46.1  =4.45.0  PLAN.md  To-do.md  app_extraction.py  hog_visualization_app.py  run_pipeline.sh  sys
claude reports/: CHAT_extraction_pipeline.md
clustering_evaluation/: detailed_results.csv
codesave/: app_linking.py  compare_matchers.py  deepseek.py  find_best_distribution.py  kmedoids_refinement.py  law_of_distances.py  mrf_refinement.py  refinement_extra.py
confs/: clustering.yaml  extraction_pipeline.yaml  inverse_compositional.yaml  preprocessing.yaml  preprocessing_test.yaml  vectorizer.yaml
docs/: CHAT_extraction_pipeline.md  architecture.puml  pipeline_activity.puml
examples/: chat_viz_demo.py
notebook_utils/: clustering.py  clustering_app.py  community_analysis.py  deepseek.py  descriptor.py  evaluate_all_splitting.py  parquet_utils.py  show_community.py  svg_utils.py  viz.py
notebooks/: 0. Deskew.ipynb  2. Dataframe and patch processing.ipynb  4. Clustering Report.ipynb  5. Create cache.ipynb  Computing Hausdorff distance.ipynb  Inverse_Compositional_Demo.ipynb  ModifedVPTree.ipynb  Test_Graph_Split.ipynb  auto_fit.py  dev.ipynb  environment.yml  leiden.ipynb  notebook_for_edwin.ipynb  test.py  wuhan.ipynb
paper/: experiments.tex  main.dvi  (+3 more)
src/vectorization/: CMakeLists.txt  README.txt  __init__.py  affine_sp_vectorization.cpp  affine_sp_vectorization.h  build_script.sh  cmdLine.h  curv.cpp  curv.h  gass.cpp  image.cpp  io_png.c  levelLine.cpp  levelLine.h  lltree.cpp  lltree.h  main.cpp  utility.cpp  utility.h  wrapper.py
(+121 files in other folders)
